# waves_game

./: .gitignore  CMakeLists.txt  Makefile  README.md  build-mac.sh  build.sh  colortest  waves
objs/: placeholder
src/: colortest.cppold  main.cpp  map.cpp  map.h  player.h  ship.h  wave.cpp  wave.h  waves.h  waves.hpp
src/cchar/: cchar.cpp  cchar.h
src/window/: point.h  window.cpp  window.h
